--- a/Building-a-ggplot.Rmd
+++ b/Building-a-ggplot.Rmd
@@ -21,7 +21,7 @@ brewer_size <- beer$brewer_size
 brewing_materials <- beer$brewing_materials
 ```
 
-I've only got half an hour so just going to look at improving a simple visualization that doesn't require any pre-processing of the data.
+I've only got half an hour so just going to look at improving a simple visualization that doesn't require much pre-processing of the data.
 The figures come from the `beer_states` dataset:
 
 ```{r, message=FALSE}
@@ -119,7 +119,7 @@ ggplot(data = beer_states,
 
 It takes a bit of experimenting with the value of `width` to get the right amount of _jitter_, but `0.2` seems to work well. We want to be able to see most of the points (or at least appreciate the density of points everywhere) but still have clearly defined categories (in this case the years).
 
-Editing the labels on a ggplot can be done in two different ways, either specifying all labels in the `labs` function, or for significant labesl like the title and the axis there are specific functions: `xlab`, `ylab` and `ggtitle`. For now I'm going to use `labs` but it really doesn't matter
+Editing the labels on a ggplot can be done in two different ways, either specifying all labels in the `labs` function, or for significant labels like the title and the axis there are specific functions: `xlab`, `ylab` and `ggtitle`. For now I'm going to use `labs` but it really doesn't matter
 
 ```{r}
 ggplot(data = beer_states,
@@ -129,7 +129,7 @@ ggplot(data = beer_states,
               width = 0.2) +
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
-       title = "Barrels of beer produced in each category by year, separated by state")
+       title = "Barrels of beer produced in each category by year across states")
 ```
 
 Looking at the long tail for each year, it might be worth looking at this plot with a logarithmic scale on the y axis, we can implement this using one of the `scale_*` functions from `{ggplot2}`, there's a wide range of them but here we'll need to find the one which implements logarithms base 10.
@@ -142,13 +142,128 @@ ggplot(data = beer_states,
               width = 0.2) +
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
-       title = "Barrels of beer produced in each category by year, separated by state") +
+       title = "Barrels of beer produced in each category by year across states") +
   scale_y_log10()
 ```
 
+I don't know if the points are working for me, luckily all we need to do to change the geom is change the call from `geom_jitter` to `geom_boxplot` (for example)
 
+```{r}
+ggplot(data = beer_states,
+       mapping = aes(x = factor(year),
+                     y = barrels)) + 
+  geom_boxplot() +
+  labs(x = "Year",
+       y = "Beer produced (# of barrels)",
+       title = "Barrels of beer produced in each category by year across states") +
+  scale_y_log10()
+```
 
-# TODO:
-* CHANGE BARRELS FROM SCIENTIFIC NOTATION
-* CHOOSING A GEOM
-* CHANGING COLOURS/FILLS
+We actually have 3 different types of beer output in this dataset
+
+```{r}
+unique(beer_states$type)
+```
+
+Splitting our plot so that there's a separate box plot for each type of beer is as easy as adding to the `aes` call in our initial call to `ggplot`.
+
+```{r}
+ggplot(data = beer_states,
+       mapping = aes(x = factor(year),
+                     y = barrels,
+                     colour = type)) + 
+  geom_boxplot() +
+  labs(x = "Year",
+       y = "Beer produced (# of barrels)",
+       title = "Barrels of beer produced in each category by year across states") +
+  scale_y_log10()
+```
+
+This plot isn't ideal - everything's a bit squished. Something we could try instead is 'faceting', in this case that's where each type of beer will get it's own plot:
+
+```{r}
+ggplot(data = beer_states,
+       mapping = aes(x = factor(year),
+                     y = barrels)) +  # remove colour = type 
+  geom_boxplot() +
+  labs(x = "Year",
+       y = "Beer produced (# of barrels)",
+       title = "Barrels of beer produced in each category by year across states") +
+  scale_y_log10() +
+  facet_grid(rows = vars(type)) # have to wrap the variable with `vars()`
+```
+
+Adding an annotation on to just the "On Premises" plot is the trickiest thing we'll do in this example (and took the most googling during my prep). It requires defining a new data frame which we pass through to `geom_text`.
+
+```{r}
+# To add annotations to a facetted plot we need a separate data frame
+# (I'll be honest this bit took some googling)
+df <- data.frame(x = 10.5, 
+                 y = 100,
+                 label = "Increase in recent years \nin on premises beer",
+                 type = "On Premises")
+
+ggplot(data = beer_states,
+       mapping = aes(x = factor(year),
+                     y = barrels)) + 
+  geom_boxplot() +
+  labs(x = "Year",
+       y = "Beer produced (# of barrels)",
+       title = "Barrels of beer produced in each category by year across states") +
+  scale_y_log10() +
+  facet_grid(rows = vars(type)) +
+  geom_text(mapping = aes(x = x, y = y, label = label),
+             data = df,
+             size = 4) # The size argument does what it says on the tin
+```
+
+Now we can focus on colouring and making cosmestic changes to our plot, we can make our boxplots look (kind of) like beer by giving them a lovely orange colour. Pass `'orange'` through to the fill argument of `geom_boxplot`.
+
+```{r}
+
+df <- data.frame(x = 10.5, 
+                 y = 100,
+                 label = "Increase in recent years \nin on premises beer",
+                 type = "On Premises")
+
+ggplot(data = beer_states,
+       mapping = aes(x = factor(year),
+                     y = barrels)) + 
+  geom_boxplot(fill = 'orange') +
+  labs(x = "Year",
+       y = "Beer produced (# of barrels)",
+       title = "Barrels of beer produced in each category by year across states") +
+  scale_y_log10() +
+  facet_grid(rows = vars(type)) +
+  geom_text(mapping = aes(x = x, y = y, label = label),
+             data = df,
+             size = 4)
+```
+
+There's loads of little changes we can make to the look of our plot (just check out all the arguments to the `theme` function). So you've got a massive amount of control over your plot. But, if you're lazy like me, there's so pre-made themes you can use... just tag the theme function you want on to the end of our stack of functions
+
+```{r}
+
+df <- data.frame(x = 10.5, 
+                 y = 100,
+                 label = "Increase in recent years \nin on premises beer",
+                 type = "On Premises")
+
+ggplot(data = beer_states,
+       mapping = aes(x = factor(year),
+                     y = barrels)) + 
+  geom_boxplot(fill = 'orange') +
+  labs(x = "Year",
+       y = "Beer produced (# of barrels)",
+       title = "Barrels of beer produced in each category by year across states") +
+  scale_y_log10() +
+  facet_grid(rows = vars(type)) +
+  geom_text(mapping = aes(x = x, y = y, label = label),
+             data = df,
+             size = 4) +
+  theme_minimal()
+```
+
+As you can see the theme makes a big difference here!
+
+Well that's it for building up this ggplot, thanks for listening/reading/watching and any questions feel free to get in touch: jtalboys@mango-solutions.com
