move from scientific notation and other small edits

--- a/Building-a-ggplot.Rmd
+++ b/Building-a-ggplot.Rmd
@@ -4,6 +4,9 @@ author: "Jack Talboys"
 date: "20/08/2020"
 output: github_document
 ---
+
+Hello! Welcome to the step-by-step walkthrough of my talk around building up a ggplot from BrightonR on the 20th of August. From personal experience, using `{ggplot2}` most effectively involves a lot of trial and error and plenty of googling, unfortunately I can't give a massive sense of that in this document but just know there was plenty of chopping and changing of plots before I settled on something I liked!
+
 We're going to use data from #TidyTuesday, for anyone not aware check out it's [github page](https://github.com/rfordatascience/tidytuesday) for more information. Essentially a weekly dataset is released, and anyone can create a visualization however they want, and show it to the world using the #TidyTuesday on twitter (a really good way to get your data visualizations out there!).
 
 We're going to look at the data on beer from week 14!
@@ -41,7 +44,7 @@ Starting with a simple plot of the number of barrels produced by year. This is w
 
 ```{r}
 # first load (and maybe install if you need to) the ggplot2 package
-#install.packages("ggplot2")
+# install.packages("ggplot2")
 library(ggplot2)
 
 # All plots begin with a call to ggplot, inside we specify the data we're going
@@ -52,7 +55,7 @@ ggplot(data = beer_states)
 
 This returns a blank plot, and it's from here that we start to build our plot.
 
-We decided to plot number of barrels produced by year, to specify this we can add to our `ggplot` call by passing information through to the `mappings` argument via the `aes` function as follows:
+We decided to plot number of barrels produced by year, to specify this we can add to our `ggplot` call by passing information through to the `mapping` argument via the `aes` function as follows:
 
 ```{r}
 ggplot(data = beer_states,
@@ -107,9 +110,11 @@ ggplot(data = beer_states,
   geom_point()
 ```
 
-Great - this has also sorted out the axis ticks! One thing I'm not so keen on is the high density of points at the bottom of the plot for all years, as the values are close together the points overlap so it's hard to tell how many are _really_ down there.
+Great - this has also sorted out the axis ticks! Although it has also messed up the x axis label.
 
-One solution is to change our geom, `geom_jitter` will add some random noise to each observation to spread them out. Here we only want some horizontal jitter, any vertical jitter would change the value of `barrels` that we perceive for that point. We can control the amount of horizontal and vertical jitter using `height` and `width` respectively (I had to check the help file for that dw)
+One thing I'm not so keen on is the high density of points at the bottom of the plot for all years, as the values are close together the points overlap so it's hard to tell how many are _really_ down there.
+
+One solution is to change our geom, `geom_jitter` will add some random noise to each observation to spread them out. Here we only want some horizontal jitter, any vertical jitter would change the value of `barrels` that we perceive for that point. We can control the amount of horizontal and vertical jitter using `height` and `width` respectively (I had to check the help file for that don't worry).
 
 ```{r}
 ggplot(data = beer_states,
@@ -145,8 +150,9 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10()
+  scale_y_log10(labels = scales::comma) # we can also change from scientific notation here
 ```
+We make better use of the space on offer using a log scale, and the addition of `scales::comma` I think really shows the log scale a lot clearer than the scientific notation from before.
 
 I don't know if the points are working for me, luckily all we need to do to change the geom is change the call from `geom_jitter` to `geom_boxplot` (for example)
 
@@ -158,7 +164,7 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10()
+  scale_y_log10(labels = scales::comma)
 ```
 
 We actually have 3 different types of beer output in this dataset
@@ -178,7 +184,7 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10()
+  scale_y_log10(labels = scales::comma)
 ```
 
 This plot isn't ideal - everything's a bit squished. Something we could try instead is 'faceting', in this case that's where each type of beer will get it's own plot:
@@ -191,7 +197,7 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10() +
+  scale_y_log10(labels = scales::comma) +
   facet_grid(rows = vars(type)) # have to wrap the variable with `vars()`
 ```
 
@@ -212,7 +218,7 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10() +
+  scale_y_log10(labels = scales::comma) +
   facet_grid(rows = vars(type)) +
   geom_text(mapping = aes(x = x, y = y, label = label),
              data = df,
@@ -235,7 +241,7 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10() +
+  scale_y_log10(labels = scales::comma) +
   facet_grid(rows = vars(type)) +
   geom_text(mapping = aes(x = x, y = y, label = label),
              data = df,
@@ -258,7 +264,7 @@ ggplot(data = beer_states,
   labs(x = "Year",
        y = "Beer produced (# of barrels)",
        title = "Barrels of beer produced in each category by year across states") +
-  scale_y_log10() +
+  scale_y_log10(labels = scales::comma) +
   facet_grid(rows = vars(type)) +
   geom_text(mapping = aes(x = x, y = y, label = label),
              data = df,
@@ -268,4 +274,4 @@ ggplot(data = beer_states,
 
 As you can see the theme makes a big difference here!
 
-Well that's it for building up this ggplot, thanks for listening/reading/watching and any questions feel free to get in touch: jtalboys@mango-solutions.com
+Well that's it for building up this ggplot, hopefully even in just half an hour I've been able to give you a sense of the process for making your best ggplot! Thanks for listening/reading/watching ,any questions feel free to get in touch: jtalboys@mango-solutions.com and (shameless plug) check out [Mango's website](https://www.mango-solutions.com/) for how we can help you and your company on your data journey! 
